--- a/[BL] East Scarp/manifest.json
+++ b/[BL] East Scarp/manifest.json
@@ -3,7 +3,7 @@
    "Author": "LemurKat",
    "Version": "2.0",
    "Description": "Catch a bus to East Scarp",
-   "UniqueID": "Lemurkat.EastScarpe.BL-beta.01",
+   "UniqueID": "Lemurkat.EastScarpe.BL-beta",
    "MinimumApiVersion": "2.0",
    "UpdateKeys": [ "Nexus:???" ],
    "ContentPackFor": {
