--- a/[CC] East Scarp Critters/manifest.json
+++ b/[CC] East Scarp Critters/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "East Scarpe Custom critters",
   "Author": "Lemurkat",
-  "Version": "2.0.0-beta.01",
+  "Version": "2.0.0-beta",
   "Description": "Adds animals etc to the game as Custom Companions.",
   "UniqueID": "LemurKat.EastScarpeCompanions",
   "UpdateKeys": ["Nexus:???"],
