--- a/[STF] East Scarp/manifest.json
+++ b/[STF] East Scarp/manifest.json
@@ -1,7 +1,7 @@
 {
   "Name": "East Scarpe Shops",
   "Author": "Lemurkat",
-  "Version": "2.0.0-beta.01",
+  "Version": "2.0.0-beta",
   "Description": "Buy and trade stuff at East Scarpe.",
   "UniqueID": "LemurKat.EastScarpeShops.STF",
   "MinimumApiVersion": "3.0.0",
