--- a/[CP] East Scarp NPCs/manifest.json
+++ b/[CP] East Scarp NPCs/manifest.json
@@ -2,7 +2,7 @@
     "Name": "Jacob & Eloise",
     "Author": "Lemurkat",
     "Description": "Adds Dr Jacob and his daughter, Eloise plus assorted other NPCs",
-    "Version": "2.0.0-beta.03",
+    "Version": "2.0.0-beta.04",
     "UniqueID": "Lemurkat.JacobEloise.CP",
     "UpdateKeys": ["Nexus:???"],
     "ContentPackFor": {
@@ -15,6 +15,10 @@
         
         {
             "UniqueID": "attonbomb.Beatrice",
+            "IsRequired": false
+        },
+{
+            "UniqueID": "Lavender.Nagito",
             "IsRequired": false
         }
     ]
